[gd_scene format=3 uid="uid://i8bcy4aolruq"]

[ext_resource type="Script" uid="uid://4t60yh5u5jyc" path="res://scripts/gui/escape_menu.gd" id="1_nbgl1"]

[node name="EscapeMenu" type="Control" unique_id=1621492436]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nbgl1")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1848420664]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="PanelContainer" parent="CenterContainer" unique_id=453172582]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel" unique_id=532370167]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer" unique_id=1308504354]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=1816017460]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer" unique_id=2050533971]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
